<resources>
    <string name="app_name">SlugLog</string>
    <string name="title_activity_maps">Map</string>
    <!-- Strings used for fragments for navigation -->

    <string name="title_activity_uio">activity_uio</string>
    <!-- Strings used for fragments for navigation -->
    <!-- Strings used for fragments for navigation -->
    <!-- Strings used for fragments for navigation -->
    <!-- Strings used for fragments for navigation -->

    <!-- Below are strings used in the layouts. -->
    <string name="SlugLog">SlugLog</string>
    <string name="EnterDesc">Enter description of slug!</string>
    <string name="UploadImage">Take Picture!</string>
    <string name="maps_api_key">AIzaSyDTCkO4DVRPmkASaze3rWIkdT4sW0MNqWM</string>
    <string name="title_activity_firstscreen_activity">firstscreen_activity</string>
    <string name="Confirm">Confirm</string>
    <string name="Back">Back</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_confirmationscreen">confirmationscreen</string>
    <string name="places_api">AIzaSyDTCkO4DVRPmkASaze3rWIkdT4sW0MNqWM</string>
</resources>